# Parallel_Computing_Lab

./: CMakeLists.txt  README.md  main.cpp  parallel_header.h  run_benchmark.py  seq.cpp  seq_header.h  stats_plot.py
headers/: game.h
src/: parallel_game.cpp  seq_game.cpp  simd_game.cpp  tiled_game.cpp
